--- a/h/groups/templates/share.html.jinja2
+++ b/h/groups/templates/share.html.jinja2
@@ -18,6 +18,18 @@
       <div class="group-form__name-input">
         {{ group.name }}
       </div>
+
+      {% if document_links %}
+      Recently annotated documents:
+      <ul>
+        {% for document_link in document_links %}
+          <li>{{ document_link }}</li>
+        {% endfor %}
+      </ul>
+      {% else %}
+        <p>This group hasn't shared any annotations yet.</p>
+      {% endif %}
+
       <!-- TODO - Potentially extract this out into a separate template !-->
       <div class="share-link-form">
         <input class="share-link-field js-share-link" value="{{ group_url }}">
