Update appearance of group share page
To match the latest mockup from Conor. This basically involves making
the group share page look a lot like the group create page already does.

--- a/h/groups/templates/create.html.jinja2
+++ b/h/groups/templates/create.html.jinja2
@@ -18,8 +18,7 @@
     <div class="group-form-footer">
       <a href="" class="group-form-footer__explain-link js-group-info-link">Tell me more about groups</a>
       <div class="group-form-footer__explain-text js-group-info-text is-hidden">
-        <p class="group-form-footer__heading">About Groups</p>
-        <p>Groups let you annotate and discuss content on the web privately.</p>
+        {% include "about-groups.html" %}
         <p class="group-form-footer__heading">How to use groups</p>
         <ol class="group-form-footer__list">
           <li>Choose a name for your group</li>
