Fix display of the top bar for signed-out users
- Show the focused group ("Public") when signed-out, without allowing
  the user to change it.
- Show a "Sign in" link in the right place, with the correct padding.

--- a/h/static/styles/app.scss
+++ b/h/static/styles/app.scss
@@ -14,6 +14,7 @@ $base-line-height: 20px;
 @import './publish-annotation-btn';
 @import './search-status-bar';
 @import './share-link';
+@import './signin-control';
 @import './simple-search';
 @import './top-bar';
 
