--- a/h/templates/app.html.jinja2
+++ b/h/templates/app.html.jinja2
@@ -20,7 +20,7 @@
     share-dialog="shareDialog"
     is-sidebar="isSidebar"
     search-controller="search"
-    groups-enabled="auth.userid && feature('groups') && isSidebar"
+    groups-enabled="feature('groups') && isSidebar"
     sort-by="sort.name"
     sort-options="sort.options"
     on-change-sort-by="sort.name = sortBy"
