--- a/h/templates/client/top_bar.html
+++ b/h/templates/client/top_bar.html
@@ -31,7 +31,7 @@
        the stream view.
   !-->
   <div class="top-bar__inner content" ng-if="groupsEnabled">
-    <group-list class="group-list"></group-list>
+    <group-list class="group-list" auth="auth"></group-list>
     <div class="top-bar__expander"></div>
     <simple-search
       class="simple-search"
