--- a/h/templates/client/signin_control.html
+++ b/h/templates/client/signin_control.html
@@ -18,13 +18,13 @@
     !--><i class="h-icon-arrow-drop-down top-bar__dropdown-arrow"></i>
   </a>
   <ul class="dropdown-menu pull-right" role="menu">
-    <li class="dropdown-menu__row" ng-show="auth.status === 'signed-in'">
+    <li class="dropdown-menu__row" ng-if="auth.status === 'signed-in'">
       <a href="/stream?q=user:{{auth.username}}"
          class="dropdown-menu__link"
          title="View all your annotations"
          target="_blank">{{auth.username}}</a>
     </li>
-    <li class="dropdown-menu__row" ng-show="auth.status === 'signed-in'">
+    <li class="dropdown-menu__row" ng-if="auth.status === 'signed-in'">
       <a class="dropdown-menu__link" href="/profile" target="_blank">Account settings</a>
     </li>
     <li class="dropdown-menu__row">
@@ -33,7 +33,7 @@
     <li class="dropdown-menu__row">
       <a class="dropdown-menu__link" href="mailto:support@hypothes.is">Feedback</a>
     </li>
-    <li class="dropdown-menu__row" ng-show="auth.status === 'signed-in'">
+    <li class="dropdown-menu__row" ng-if="auth.status === 'signed-in'">
       <a class="dropdown-menu__link dropdown-menu__link--subtle"
          href="" ng-click="onLogout()">Sign out</a>
     </li>
@@ -56,7 +56,7 @@
     --><i class="h-icon-arrow-drop-down"></i>
   </span>
   <ul class="dropdown-menu pull-right" role="menu">
-    <li class="dropdown-menu__row" ng-show="auth.status === 'signed-in'">
+    <li class="dropdown-menu__row" ng-if="auth.status === 'signed-in'">
       <a class="dropdown-menu__link" href="/profile" target="_blank">Account</a>
     </li>
     <li class="dropdown-menu__row" >
@@ -65,11 +65,11 @@
     <li class="dropdown-menu__row" >
       <a class="dropdown-menu__link" href="/docs/help" target="_blank">Help</a>
     </li>
-    <li class="dropdown-menu__row" ng-show="auth.status === 'signed-in'">
+    <li class="dropdown-menu__row" ng-if="auth.status === 'signed-in'">
       <a class="dropdown-menu__link" href="/stream?q=user:{{auth.username}}"
          target="_blank">My Annotations</a>
     </li>
-    <li class="dropdown-menu__row" ng-show="auth.status === 'signed-in'">
+    <li class="dropdown-menu__row" ng-if="auth.status === 'signed-in'">
       <a class="dropdown-menu__link" href="" ng-click="onLogout()">Sign out</a>
     </li>
   </ul>
