Show "Only Me" when editing a private annotation
At the top of an annotation card is a line that says something like:

    seanh to (g) Foo (l) Only Me

if it is a private annotation in group foo. (g) is the group icon and
(l) is the lock/privacy icon.

For some reason the (l) Only Me part was only being shown when _not_
editing the annotation.

This fixes it to always be shown. So when creating or editing an
annotation, if you select Only Me in the Post dropdown then (l) Only Me
will appear in the annotation title, if you select the group (or Public)
then Only Me will disappear.

--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -21,7 +21,7 @@
         </a>
       </span>
       <i class="h-icon-border-color" ng-show="vm.isHighlight() && !vm.editing" title="This is a highlight. Click 'edit' to add a note or tag."></i>
-      <span ng-show="vm.isPrivate() && !vm.editing"
+      <span ng-show="vm.isPrivate()"
             title="This annotation is visible only to you.">
         <i class="h-icon-lock"></i> Only Me
       </span>
