Fix a template filename

--- a/h/groups/templates/create.html.jinja2
+++ b/h/groups/templates/create.html.jinja2
@@ -18,7 +18,7 @@
     <div class="group-form-footer">
       <a href="" class="group-form-footer__explain-link js-group-info-link">Tell me more about groups</a>
       <div class="group-form-footer__explain-text js-group-info-text is-hidden">
-        {% include "about-groups.html" %}
+        {% include "about-groups.html.jinja2" %}
         <p class="group-form-footer__heading">How to use groups</p>
         <ol class="group-form-footer__list">
           <li>Choose a name for your group</li>
