--- a/h/groups/templates/share.html.jinja2
+++ b/h/groups/templates/share.html.jinja2
@@ -28,7 +28,7 @@
     </div>
     <div class="group-form-footer">
       <div class="group-form-footer__explain-text">
-        {% include "about-groups.html" %}
+        {% include "about-groups.html.jinja2" %}
 
         <p class="group-form-footer__heading">You can</p>
         <ol class="group-form-footer__list">
