Add left and right padding to .group-form

--- a/h/static/styles/group-form.scss
+++ b/h/static/styles/group-form.scss
@@ -24,6 +24,8 @@
     border: $border;
     color: $color-dove-gray;
     padding-bottom: 45px;
+    padding-left: 5px;
+    padding-right: 5px;
     margin-top: 75px;
 
     &__form {
