Fix minor visual regression on help pages
A style for anchor tags was moved from `common.scss` to `elements.scss`,
and so we now need to include that here.

--- a/h/static/styles/help-page.scss
+++ b/h/static/styles/help-page.scss
@@ -3,9 +3,10 @@
 $base-font-size: 16px;
 $base-line-height: 22px;
 
-@import 'reset';
-@import 'common';
-@import "./mixins/icons";
+@import './reset';
+@import './common';
+@import './elements';
+@import './mixins/icons';
 
 body {
   background: #fff;
