Simplify the group share links

--- a/h/static/styles/share-link.scss
+++ b/h/static/styles/share-link.scss
@@ -7,11 +7,11 @@
   white-space: normal;
 }
 
-.share-link-toggle {
+.share-link {
   color: $gray-light;
 }
 
-.share-link-toggle:hover {
+.share-link:hover {
   text-decoration: underline;
   color: $gray-dark;
 }
