Use raven-js for client-side error capture and reporting
Capture exceptions reported via Angular's $exceptionHandler
service and window.onerror and report them via Raven.

The client currently uses the same Sentry DSN as the main
application, which gets the DSN from the SENTRY_DSN
environment variable.

 * Add a <script> tag to all pages on the site which
   defines a window.RAVEN_CONFIG variable which provides the DSN
   and release string needed to configure Raven JS on the client

 * Configure and setup RavenJS in the main site JS, Chrome
   extension and the sidebar.

   For the sidebar, Angular integration is configured
   using Raven's Angular plugin.

 * Configure the user ID associated with Sentry reports
   when the session state is received

 * Extract the code which builds the sidebar/extension
   config dictionary out of the template into
   its own module for easier sharing between the Chrome
   extension and the sidebar's code.

--- a/h/templates/app.html.jinja2
+++ b/h/templates/app.html.jinja2
@@ -116,10 +116,7 @@
 
 {% block scripts %}
   <script id="hypothesis-settings" type="application/json">
-    {
-      "apiUrl": "{{ request.route_url('api') }}",
-      "websocketUrl": "{{ request.route_url('ws') | websocketize }}"
-    }
+  {{ app_config | to_json }}
   </script>
   {% assets "app_js" %}
     <script src="{{ ASSET_URL }}"></script>
