Remove the 'groups' feature flag
This is deployed and toggled on everywhere, so we can simplify our code
by removing this feature flag.

There's one small wrinkle here, which is that there are still two
distinct designs for the "top bar" -- one for the sidebar and one for
the stream. I've simplified this in this commit, and removed any
reference to groups as a toggle for the two flavours of sidebar, but at
some point we will probably want to unify the two experiences.

--- a/h/templates/client/top_bar.html
+++ b/h/templates/client/top_bar.html
@@ -1,14 +1,8 @@
 <!-- top bar for the sidebar and the stream.
 !-->
 <div class="top-bar" ng-class="frame.visible && 'shown'" ng-cloak>
-  <!-- Legacy design for top bar !-->
-  <div class="top-bar__inner content" ng-if="!groupsEnabled">
-    <button class="top-bar__btn"
-            ng-click="shareDialog.visible = !shareDialog.visible"
-            ng-if="isSidebar"
-            title="Share this page">
-      <i class="h-icon-share"></i>
-    </button>
+  <!-- Legacy design for top bar, as used in the stream !-->
+  <div class="top-bar__inner content" ng-if="!isSidebar">
     <simple-search
       class="simple-search"
       query="searchController.query"
@@ -24,13 +18,12 @@
       on-logout="onLogout()">
     </signin-control>
   </div>
-  <!-- New design for the top bar.
-       This is part of the groups roll-out
+  <!-- New design for the top bar, as used in the sidebar.
 
        The inner div is styled with 'content' to center it in
        the stream view.
   !-->
-  <div class="top-bar__inner content" ng-if="groupsEnabled">
+  <div class="top-bar__inner content" ng-if="isSidebar">
     <group-list class="group-list" auth="auth"></group-list>
     <div class="top-bar__expander"></div>
     <simple-search
@@ -48,7 +41,6 @@
     </sort-dropdown>
     <a class="top-bar__btn"
        ng-click="shareDialog.visible = !shareDialog.visible"
-       ng-if="isSidebar"
        title="Share this page">
       <i class="h-icon-share"></i>
     </a>
