--- a/h/templates/client/viewer.html
+++ b/h/templates/client/viewer.html
@@ -14,7 +14,7 @@
     selection-count="selectedAnnotationsCount"
     on-clear-selection="clearSelection()">
   </search-status-bar>
-  <li ng-if="!feature('groups') && isStream">
+  <li ng-if="isStream">
     <sort-dropdown
       sort-by="sort.name"
       sort-options="sortOptions"
