Enable staff to look up user's email addresses
Allow staff to access the /admin index page and to use some of the admin pages
within (so far only the /admin/users page).

Assign a different permission to each admin page ('admin_features',
'admin_nipsa' etc) then on the root resource assign some of these permissions
to admins and some to staff (or to both admins and staff).

This enables staff users to access the admin index page and some of the admin
pages within.

Then tweak the admin template to only show links to the admin pages that the
user has permission to use.

The "admin" permission, previously assigned to admin users, is removed since
it's no longer used.

--- a/h/templates/layouts/admin.html.jinja2
+++ b/h/templates/layouts/admin.html.jinja2
@@ -1,11 +1,11 @@
 {%- set nav_pages = [
-    ('index', 'Home', request.route_url('admin_index')),
-    ('features', 'Feature flags', request.route_url('admin_features')),
-    ('nipsa', 'NIPSA', request.route_url('admin_nipsa')),
-    ('admins', 'Administrators', request.route_url('admin_admins')),
-    ('staff', 'Staff', request.route_url('admin_staff')),
-    ('users', 'Users', request.route_url('admin_users')),
-    ('badge', 'Badge', request.route_url('admin_badge')),
+    ('index', 'admin_index', 'Home'),
+    ('features', 'admin_features', 'Feature flags'),
+    ('nipsa', 'admin_nipsa', 'NIPSA'),
+    ('admins', 'admin_admins', 'Administrators'),
+    ('staff', 'admin_staff', 'Staff'),
+    ('users', 'admin_users', 'Users'),
+    ('badge', 'admin_badge', 'Badge'),
 ] -%}
 
 {%- set page_id = page_id|default('home') -%}
@@ -42,10 +42,12 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            {% for id, title, href in nav_pages %}
-            <li{% if id == page_id %} class="active"{% endif %}>
-              <a href="{{ href }}">{{ title }}</a>
-            </li>
+            {% for id, permission, title in nav_pages %}
+              {% if request.has_permission(permission) %}
+                <li{% if id == page_id %} class="active"{% endif %}>
+                  <a href="{{ request.route_url(permission) }}">{{ title }}</a>
+                </li>
+              {% endif %}
             {% endfor %}
           </ul>
         </div>
