Fix broken /fund link

--- a/h/templates/home.html.jinja2
+++ b/h/templates/home.html.jinja2
@@ -301,7 +301,7 @@
               </li>
               <li id="menu-item-3623"
                   class="menu-item menu-item-type-custom menu-item-object-custom menu-item-3623">
-                <a href="/fund/">Grant opportunities</a>
+                <a href="https://hypothes.is/fund/">Grant opportunities</a>
               </li>
               <li id="menu-item-3611"
                   class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3611">
