--- a/h/templates/home.html.jinja2
+++ b/h/templates/home.html.jinja2
@@ -7,7 +7,9 @@
 
     <title>Hypothesis | The Internet, peer reviewed.</title>
 
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    {% assets "front_css" %}
+        <link rel="stylesheet" href="{{ ASSET_URL }}">
+    {% endassets %}
     <link rel='stylesheet' id='wp-syntax-css-css' type='text/css' media='all'
           href='https://hypothes.is/wp-content/plugins/wp-syntax/css/wp-syntax.css?ver=1.0'/>
     <link rel='stylesheet' id='sage_css-css' type='text/css' media='all'
