Copy the WordPress theme CSS into the app
This just copies the already compiled and minified main.css file into
the app, doesn't yet try to copy the source Sass files and recreate the
assets pipeline for them.

--- a/h/templates/home.html.jinja2
+++ b/h/templates/home.html.jinja2
@@ -7,11 +7,9 @@
 
     <title>Hypothesis | The Internet, peer reviewed.</title>
 
-    {% assets "front_css" %}
-        <link rel="stylesheet" href="{{ ASSET_URL }}">
+    {% assets "front_page_css" %}
+      <link rel="stylesheet" href="{{ ASSET_URL }}">
     {% endassets %}
-    <link rel='stylesheet' id='sage_css-css' type='text/css' media='all'
-          href='https://hypothes.is/wp-content/themes/hypo-theme/dist/styles/main.css'/>
 
     {# jquery script links. Replace these with app-provided copies, and not in
        the head! #}
