Copy apple-touch-icons from WordPress
Also reduce these to just the one 152x152 icon instead of several
different ones. This should be sufficient. The tiny downside is that
older devices download the larger image and then rescale it.

--- a/h/templates/home.html.jinja2
+++ b/h/templates/home.html.jinja2
@@ -13,32 +13,18 @@
 
     <link rel='canonical' href='{{ base_url }}'>
 
-    <link rel="apple-touch-icon" sizes="57x57"
-          href="/wp-content/uploads/fbrfg/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60"
-          href="/wp-content/uploads/fbrfg/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72"
-          href="/wp-content/uploads/fbrfg/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76"
-          href="/wp-content/uploads/fbrfg/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114"
-          href="/wp-content/uploads/fbrfg/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120"
-          href="/wp-content/uploads/fbrfg/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144"
-          href="/wp-content/uploads/fbrfg/apple-touch-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152"
-          href="/wp-content/uploads/fbrfg/apple-touch-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180"
-          href="/wp-content/uploads/fbrfg/apple-touch-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="32x32"
-          href="/wp-content/uploads/fbrfg/favicon-32x32.png">
+          href="{{ base_url }}assets/images/apple-touch-icon-152x152.png">
+
     <link rel="icon" type="image/png" sizes="192x192"
           href="/wp-content/uploads/fbrfg/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="96x96"
-          href="/wp-content/uploads/fbrfg/favicon-96x96.png">
+
     <link rel="icon" type="image/png" sizes="16x16"
           href="/wp-content/uploads/fbrfg/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32"
+          href="/wp-content/uploads/fbrfg/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96"
+          href="/wp-content/uploads/fbrfg/favicon-96x96.png">
     <link rel="shortcut icon" href="/wp-content/uploads/fbrfg/favicon.ico">
   </head>
 
