Copy favicons from WordPress

--- a/h/templates/home.html.jinja2
+++ b/h/templates/home.html.jinja2
@@ -16,16 +16,16 @@
     <link rel="apple-touch-icon" sizes="152x152"
           href="{{ base_url }}assets/images/apple-touch-icon-152x152.png">
 
-    <link rel="icon" type="image/png" sizes="192x192"
-          href="/wp-content/uploads/fbrfg/android-chrome-192x192.png">
-
     <link rel="icon" type="image/png" sizes="16x16"
-          href="/wp-content/uploads/fbrfg/favicon-16x16.png">
+          href="{{ base_url }}assets/images/favicons/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32"
-          href="/wp-content/uploads/fbrfg/favicon-32x32.png">
+          href="{{ base_url }}assets/images/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96"
-          href="/wp-content/uploads/fbrfg/favicon-96x96.png">
-    <link rel="shortcut icon" href="/wp-content/uploads/fbrfg/favicon.ico">
+          href="{{ base_url }}assets/images/favicons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="192x192"
+          href="{{ base_url }}assets/images/favicons/android-chrome-192x192.png">
+    <link rel="shortcut icon"
+          href="{{ base_url }}assets/images/favicons/favicon.ico">
   </head>
 
   <body class="home page page-id-238 page-template-default">
