Copy Chrome icon from WordPress

--- a/h/templates/home.html.jinja2
+++ b/h/templates/home.html.jinja2
@@ -117,7 +117,7 @@
                        onclick="chrome.webstore.install();return false;"
                        data-chromeext-button="">
                       <img alt="" class="installer__browser-logo--chrome"
-                           src="https://hypothes.is/wp-content/themes/hypo-theme/dist/images/browser-chrome-64x64.png">
+                           src="{{ base_url }}assets/images/browser-chrome-64x64.png">
                       Install
                     </a>
                   </span>
