--- a/h/templates/home.html.jinja2
+++ b/h/templates/home.html.jinja2
@@ -111,7 +111,7 @@
 
                 <section class="installer">
 
-                  <span class="installer__section--chrome">
+                  <span class="hidden unhide-in-chrome">
                     <a class="btn btn-primary hidden-xs"
                        href="https://chrome.google.com/webstore/detail/bjfhmglciegochdpefhhlphglcehbmek"
                        onclick="chrome.webstore.install();return false;"
@@ -121,8 +121,7 @@
                       Install
                     </a>
                   </span>
-
-                  <span class="installer__section--bookmarklet">
+                  <span class="hide-in-chrome">
                     <a class="btn btn-primary hidden-xs" href="#"
                        data-toggle="modal" data-target="#bookmarklet">
                       Get Bookmarklet
@@ -145,7 +144,7 @@
                   </form>
                 </section>
  
-                <p class="installer__section--bookmarklet">
+                <p class="hide-in-chrome">
                   There's also a
                   <a href="https://chrome.google.com/webstore/detail/bjfhmglciegochdpefhhlphglcehbmek">
                     Chrome extension
@@ -154,18 +153,7 @@
                   <a href="#" class="" data-toggle="modal" data-target="#addtoyoursite" data-addtosite-button="">
                     add it to your website</a>.
                 </p>
-
-                <p class="chrome-mobile-only visible-xs-block">
-                  There's also a
-                  <a href="https://chrome.google.com/webstore/detail/bjfhmglciegochdpefhhlphglcehbmek">
-                    Chrome extension
-                  </a>
-                  or you can
-                  <a href="#" class="" data-toggle="modal" data-target="#addtoyoursite" data-addtosite-button="">
-                    add it to your website</a>.
-                </p>
-
-                <p class="chrome-desktop-only hidden-xs">
+                <p class="hidden unhide-in-chrome">
                   There's also a
                   <a href="#" class="" data-toggle="modal" data-target="#bookmarklet">
                     bookmarklet
@@ -174,6 +162,20 @@
                   <a href="#" class="" data-toggle="modal" data-target="#addtoyoursite" data-addtosite-button="">
                     add it to your website</a>.
                 </p>
+                <script>
+                  if (window.chrome !== undefined) {
+                    var elements = document.getElementsByClassName(
+                        "unhide-in-chrome");
+                    for (var i=0; i<elements.length; i++) {
+                      elements[i].classList.remove("hidden");
+                    }
+                    elements = document.getElementsByClassName(
+                        "hide-in-chrome");
+                    for (var i=0; i<elements.length; i++) {
+                      elements[i].classList.add("hidden");
+                    }
+                  }
+                </script>
 
                 <div class="modal fade" id="bookmarklet" tabindex="-1"
                      role="dialog" aria-labelledby="myModalLabel"
@@ -311,8 +313,5 @@
     {% assets "front_page_js" %}
       <script src="{{ ASSET_URL }}"></script>
     {% endassets %}
-    <script type='text/javascript'
-            src='https://hypothes.is/wp-content/themes/hypo-theme/dist/scripts/main.js'>
-    </script>
   </body>
 </html>
