Fix modal dialogs on front page
Bootstrap's JavaScript wasn't being included.

--- a/h/templates/home.html.jinja2
+++ b/h/templates/home.html.jinja2
@@ -327,5 +327,8 @@
     {% assets "front_page_js" %}
       <script src="{{ ASSET_URL }}"></script>
     {% endassets %}
+    {% assets "bootstrap" %}
+      <script src="{{ ASSET_URL }}"></script>
+    {% endassets %}
   </body>
 </html>
