Keyboard focus the login form when shown
Automatically put the keyboard focus on the username field in the login
form when it's shown.

--- a/h/templates/client/auth.html
+++ b/h/templates/client/auth.html
@@ -23,7 +23,7 @@
         <input class="form-input" type="text" id="field-login-username"
                name="username" value=""
                ng-model="model.username"
-               required autocapitalize="false" />
+               required autocapitalize="false" h-autofocus />
         <ul class="form-error-list">
           <li class="form-error"
               ng-show="login.username.$error.required"
