Remove Font Awesome and add the 3 icons to the H icon font instead
Font Awesome was used for the 4 icons on the homepage

 - Twitter, GitHub, RSS feed in the footer
 - 'Drag' icon in the bookmarklet installation instructions

Reduce page weight and simplify our lives by having all the icons
in a single icon font.

--- a/h/templates/home.html.jinja2
+++ b/h/templates/home.html.jinja2
@@ -187,7 +187,7 @@
                             href="javascript:(function(){window.hypothesisConfig=function(){return{showHighlights:true};};var d=document,s=d.createElement('script');s.setAttribute('src','{{ request.route_url("embed") }}');d.body.appendChild(s)})();"
                             onclick="alert('Drag me to the bookmarks bar');return false;">Launch Hypothesis
                         </a>
-                        <p><i class="fa fa-arrows"></i> Drag the button into
+                        <p><i class="h-icon-move"></i> Drag the button into
                         your bookmarks bar then click it to launch the
                         Hypothesis application.</p>
                         <p>Alternatively, right click and select
@@ -248,12 +248,12 @@
       <nav class="navbar navbar-default">
         <div class="nav navbar-nav social-media pull-right">
           <a href="https://github.com/hypothesis">
-            <i class="fa fa-github"></i>
+            <i class="h-icon-github"></i>
           </a>
           <a href="https://twitter.com/hypothes_is">
-            <i class="fa fa-twitter"></i>
+            <i class="h-icon-twitter"></i>
           </a>
-          <a href="{{ rss_feed_url }}"><i class="fa fa-rss"></i></a>
+          <a href="{{ rss_feed_url }}"><i class="h-icon-feed"></i></a>
         </div>
         <div class="menu-footer-container">
           <ul id="menu-footer" class="nav navbar-nav">
